@@ -207,7 +207,9 @@ Path::Tiny = 0.050
 [Prereqs / RuntimeRecommends]
 Test::Differences = 0
 Data::DPath = 0
+Test::TempDir::Tiny = 0
 
 [Prereqs / DevelopRequires]
 Test::Differences = 0
 Data::DPath = 0
+Test::TempDir::Tiny = 0
