@@ -1,6 +1,12 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 1.004003
+ [Added / develop requires]
+ - Test::TempDir::Tiny
+
+ [Added / runtime recommends]
+ - Test::TempDir::Tiny
+
  [Added / runtime requires]
  - recommended
 
