@@ -3,8 +3,11 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
  [Dependencies::Stats]
  - Dependencies changed since 1.004002, see misc/*.deps* for details
- - develop: -1
- - runtime: +1 -1
+ - develop: +1 -1
+ - runtime: +1 -1 (recommends: +1)
+
+ [Features]
+ - Now optionally uses Test::TempDir::Tiny for the temporary directory.
 
  [Internals]
  - use recommended.pm to load optional modules.
